# LifeFlux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  create_readme_demo.py  pyproject.toml  requirements.txt
docs/: 3d_guide.md  api_reference.md  installation.md  usage_guide.md
examples/: __init__.py  advanced_demo.py  basic_usage.py
scripts/: generate_demo_gifs.py
src/: __init__.py  lifeflux2d.py  lifeflux3d.py
tests/: __init__.py  benchmark.py  test_integration.py  test_life2d.py  test_life3d.py
